--- a/index.html
+++ b/index.html
@@ -350,7 +350,11 @@
       </div>
       <footer>
         <div class="pull-right">
-            Disclaimer: We are not affiliated with any of the "Receive SMS via Free, Temporary and Disposal Telephone Number" services listed in this WEB page. And, we can't guarantee any of them has no vulneraibility. You should take your own risk for the security of the SMS services.
+            Disclaimer: We are not affiliated with any of the "Receive SMS via Free, Temporary and Disposal Telephone Number" services listed in this WEB page.
+        </div>
+        <div class="clearfix"></div>
+        <div class="pull-right">
+            And, we can't guarantee any of them has no vulneraibility. You should take your own risk for the security of the SMS services.
         </div>
         <div class="clearfix"></div>
         <div class="pull-right">
