--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         </div>
         <div class="clearfix"></div>
         <div class="pull-right">
-            And, we can't guarantee any of them has no vulneraibility. You should take your own risk for the security of the SMS services.
+            And, we can't guarantee any of them has no vulneraibility. You should take your own risk for the security of using these SMS services.
         </div>
         <div class="clearfix"></div>
         <div class="pull-right">
