--- a/index.html
+++ b/index.html
@@ -263,6 +263,18 @@
       -webkit-text-fill-color: #fff !important;
     }
   </style>
+  <!-- Smartsupp Live Chat script -->
+  <script type="text/javascript">
+  var _smartsupp = _smartsupp || {};
+  _smartsupp.key = '82d5074c61cc1e32f9dc4bac979da4ec84d076a6';
+  window.smartsupp||(function(d) {
+    var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+    s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+    c.type='text/javascript';c.charset='utf-8';c.async=true;
+    c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+  })(document);
+  </script>
+
 </head>
 
 <body class="nav-md">
